Fixed breadcrumb bleeding out when multi-lines

--- a/client/portal/entity/style.less
+++ b/client/portal/entity/style.less
@@ -10,7 +10,7 @@ h1.overview-heading {
 .breadcrumb-container {
     &.row {
         background-color: @row-bg-color;
-        height: 30px;
+        min-height: 30px;
     }
     .no-padding {
         padding-top: 3px;
